k8s/helm/traefik-admin-basic-auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-basic-auth
  namespace: traefik
spec:
  basicAuth:
    secret: admin-basic-auth
