k8s/helm/ingRoute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myconvertertls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`myconverter.woyd.ru`)
      kind: Rule
      services:
        - name: myconverter
          port: 80
  tls:
      certResolver: letsencrypt
