k8s/helm/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-exposed-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: ( Host(`myconverter`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`) ))
      middlewares:
        - name: admin-basic-auth
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-basic-auth
  namespace: traefik
spec:
  basicAuth:
    secret: admin-basic-auth
